----------------
 List of changes
 ---------------



.. Note::
	10/02/18 ceInstall tag 2.3

|

10/02/18
- fixed get_coptions logFile and logFileS if needed else ifs
- xercesc version increased to 3.2.2. Splitting env lib/lib64 check for Darwin/Linux
- go_field changed to reflect latest magnetic field maps. 

9/28/18
- fixed go_qt for Linux CentOS flavor
- fixed go_evio log
- fixed go_reload for 2.3
- added  -Wno-dev to suppress cmake warnings
- fixed softenv.sh typo

9/27/18
- gemc moved to github release mechanism
- at JLAB QT_VERSION is 5.10.1 not the system
- added geant4 data default env and utils to print out settings in printVersion.csh
- updated jana package name
- 2.3 release finalized
- better log of softenv

9/25/18
- removed 32 bit support
- preparing Announcement for 2.3
- setting wget command is different on Linux or Darwin. Moving -qc and show-progress options to a shell variable mwget
- xercesc: in linux, linking lib64 to lib. Why oh why they keep doing this.
- fixes to go_qt script offline installer, and go_geant4 repo name
- added systematic way of getting geant4 data
- fixed data retrievel for geant4
- added log of ROOT installation path

9/24/18
- formatting go_tar exclude from tar
- better README and walkthrough explanation
- better step-by-step instruction formatting
- added qc option to wget: quiet and do not retrieve if file exists already (avoids writing duplicates)
- added doc for default system installation of qt
- using $getCoptions throughout the installation scripts
- added wget --show-progress option
- added support for custom list of software library: only the packages in .jlab_software will be considered in the environment
- getting ready to release 2.3

8/28/18
- qt system is now the default mode. DEFAULT_QT_VERSION is set to system, and go_qt checks QT_SYSTEM
- clhep env sets the path
- jana env sets the path and plugin path

4/11/18
- compilation procedure standardized for package gemc