@@ -18,9 +18,9 @@ setenv PYTHONPATH ${PYTHONPATH}:${CCDB_HOME}/python
 setenv CCDB_USER $USER
 
 
-echo
-echo if the ssl library is not found in Mojave, for now go to $CCDB_HOME and
-echo type scons, then remove ssl and crypto from the command line.
-echo remember to mv tmp/Library/libccdb.dylib lib/
-echo
+#
+# if the ssl library is not found in Mojave, for now go to $CCDB_HOME and
+# type scons, then remove ssl and crypto from the command line.
+# remember to mv tmp/Library/libccdb.dylib lib/
+#
 
