@@ -22,7 +22,7 @@ else if ($JLAB_VERSION == "devel") then
 	set DEFAULT_CCDB_VERSION     = 1.06.02
 	set DEFAULT_CLHEP_VERSION    = 2.4.1.0
 	set DEFAULT_EVIO_VERSION     = 5.1
-	set DEFAULT_GEANT4_VERSION   = 4.10.05
+	set DEFAULT_GEANT4_VERSION   = 4.10.05.p01
 	set DEFAULT_G4DATA_VERSION   = 10.5.0
 	set DEFAULT_GEMC_VERSION     = 2.7
 	set DEFAULT_JANA_VERSION     = 0.8.0
