@@ -9,7 +9,7 @@ else if (`uname` == "Darwin") then
 endif
 
 
-if($1 == "release"|| $1 == "copt" || $1 == "log"  || $1 == "repo" || $1 == "dir" || $1 == "cmakev" ||  $1 == "logFile" || $1 == "logFileS" || $1 == "logStart" || $1 == "logEnd"  ||  $1 == "logTime" || $1 == "removeAndCreate" || $1 == "getAndUnpack" ||  $1 == "download" ||  $1 == "getAndUnpackTo" || $1 == "installLog") then
+if($1 == "release"|| $1 == "copt" || $1 == "log"  || $1 == "repo" || $1 == "dir" || $1 == "cmakev" ||  $1 == "logFile" ||  $1 == "xLog" || $1 == "logFileS" || $1 == "logStart" || $1 == "logEnd"  ||  $1 == "logTime" || $1 == "removeAndCreate" || $1 == "getAndUnpack" ||  $1 == "download" ||  $1 == "getAndUnpackTo" || $1 == "installLog") then
 	goto $1
 endif
 
@@ -82,36 +82,52 @@ if($1 == "cmakev") exit
 logFile:
 	if($2 == "clhep") then
 		echo "$CLHEP_BASE_DIR/build_log"
-		xterm -geometry 150x40+100+100 -e tail -f $CLHEP_BASE_DIR/build_log
 	else if($2 == "xercesc") then
 		echo "$XERCESCROOT/build_log"
-		xterm -geometry 150x40+100+100 -e tail -f $XERCESCROOT/build_log
 	else if($2 == "geant4")   then
 		echo "$G4INSTALL/build_log"
-		xterm -geometry 150x40+100+100 -e tail -f $G4INSTALL/build_log
 	else if($2 == "ccdb")     then
 		echo "$CCDB_HOME/build_log"
-		xterm -geometry 150x40+100+100 -e tail -f $CCDB_HOME/build_log
 	else if($2 == "evio")     then
 		echo "$EVIO/build_log"
-		xterm -geometry 150x40+100+100 -e tail -f $EVIO/build_log
 	else if($2 == "mlibrary") then
 		echo "$MLIBRARY/build_log"
-		xterm -geometry 150x40+100+100 -e tail -f $MLIBRARY/build_log
 	else if($2 == "gemc")     then
 		echo "$GEMC/build_log"
-		xterm -geometry 150x40+100+100 -e tail -f $GEMC/build_log
 	else if($2 == "root")     then
 		echo "$ROOTSYS/build_log"
-		xterm -geometry 150x40+100+100 -e tail -f $ROOTSYS/build_log
 	else if($2 == "banks")    then
 		echo "$JLAB_SOFTWARE/banks/$BANKS_VERSION/build_log"
-		xterm -geometry 150x40+100+100 -e tail -f $JLAB_SOFTWARE/build_log
 	else if($2 == "jana") then
 		echo "$JANA_HOME/build_log"
-		xterm -geometry 150x40+100+100 -e tail -f $JANA_HOME/build_log
 	endif
 if($1 == "logFile") exit
+
+# log file for each system
+xLog:
+	echo " > Starting xterm showing compilation log"
+	if($2 == "clhep") then
+		xterm -geometry 150x40+100+100 -e tail -f $CLHEP_BASE_DIR/build_log &
+	else if($2 == "xercesc") then
+		xterm -geometry 150x40+100+100 -e tail -f $XERCESCROOT/build_log &
+	else if($2 == "geant4")   then
+		xterm -geometry 150x40+100+100 -e tail -f $G4INSTALL/build_log &
+	else if($2 == "ccdb")     then
+		xterm -geometry 150x40+100+100 -e tail -f $CCDB_HOME/build_log &
+	else if($2 == "evio")     then
+		xterm -geometry 150x40+100+100 -e tail -f $EVIO/build_log &
+	else if($2 == "mlibrary") then
+		xterm -geometry 150x40+100+100 -e tail -f $MLIBRARY/build_log &
+	else if($2 == "gemc")     then
+		xterm -geometry 150x40+100+100 -e tail -f $GEMC/build_log &
+	else if($2 == "root")     then
+		xterm -geometry 150x40+100+100 -e tail -f $ROOTSYS/build_log &
+	else if($2 == "banks")    then
+		xterm -geometry 150x40+100+100 -e tail -f $JLAB_SOFTWARE/build_log &
+	else if($2 == "jana") then
+		xterm -geometry 150x40+100+100 -e tail -f $JANA_HOME/build_log &
+	endif
+if($1 == "xLog") exit
 
 
 # log file for each system - with env variable as path
@@ -145,6 +161,7 @@ logStart:
 	echo " > Source compilation started on --- " `date` > $2
 	echo " > Source compilation started on --- " `date` 
 	echo " > Compiling source. Log will be in" $3
+	echo " > Compilation Log " > $2
 if($1 == "logStart") exit
 
 
@@ -159,7 +176,7 @@ logTime:
 	echo
 	grep "Source compilation started on --- " $2
 	grep "Source compilation ended on --- " $2
-	echo
+	echo 
 if($1 == "logTime") exit
 
 
