@@ -44,6 +44,9 @@ make:
 	# log start of compilation
 	$getCoptions logStart $blog $blogS
 
+	# start showing log on xterm
+	$getCoptions xLog clhep
+
 	# the  -Wno-dev  flag is to ignore the project developers cmake warnings for policy CMP0075
 	cmake -Wno-dev -DCMAKE_INSTALL_PREFIX=$CLHEP_BASE_DIR  $sourceDir >> $blog
 
