@@ -44,9 +44,10 @@ make:
 	echo
 	./compileCmesh
 
+	# start showing log on xterm
+	$getCoptions xLog mlibrary
+
 	# Adding LIBRARY="shared" in case gemc is built as a library
-	echo " > Compiling mlibrary..."
-	echo
 	scons $opt OPT=1 LIBRARY="shared" >>  $blog
 
 	# log end of compilation, total time
