@@ -46,6 +46,9 @@ make:
 	# log start of compilation
 	$getCoptions logStart $blog $blogS
 
+	# start showing log on xterm
+	$getCoptions xLog xercesc
+
 	# the  -Wno-dev  flag is to ignore the project developers cmake warnings for policy CMP0075
 	cmake -Wno-dev  -DCMAKE_INSTALL_PREFIX=$XERCESCROOT $sourceDir >> $blog
 
