@@ -116,7 +116,7 @@ python setup.py install
 				<ul>
 					<li>dnf install gcc-c++ expat-devel zlib-devel</li>
 					<li>dnf install libx11-devel mesa-libGLU-devel libXmu-devel </li>
-					<li>dnf install community-mysql-embedded-mysql <br/>(the mysql package name may vary depends on the OS, you can dnf yum search mysql to find out the available version)</li><br/>
+					<li>dnf install mariadb-devel <br/>(the mysql package name may vary depends on the OS, you can dnf yum search mysql to find out the available version)</li><br/>
 					Recommended: the system version of qt:
 					<li>dnf install qt5-qtbase qt5-qtbase-devel qt5-qtwebkit qt5-qtwebkit-devel qt5-qtx11extras qt5-qtbase-mysql</li>
 					
