@@ -56,9 +56,9 @@
 	
 	<ul>
 		<h3> &#x2318; MAC OS specific requirements</h3>
-		Make sure you have the latest xcode tools with:
+		Remember to update brew:
 		<pre><code>
-xcode-select --install
+brew update
 		</code></pre>
 		
 		You can install the dependencies with <a href="http://brew.sh"> homebrew</a>:<br/><br/>
@@ -235,7 +235,7 @@ cd $JLAB_ROOT/vvversiontoreplaceee/install
 ./go_banks
 ./go_jana
 			</code></pre>
-			
+			Note: 
 			All the packages listed above "go_gemc" are necessary to run gemc. <br/><br/>
 		</li>
 
